--- a/style.css
+++ b/style.css
@@ -1,27 +1,22 @@
-p {
-	color: rgb(36, 17, 174);
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+.container {
+	border: 4px solid grey;
+	display: flex;
+	flex-direction: row-reverse;
+	min-height: 400px;
+	justify-content: start;
+	align-items: end;
+}
+.item {
+	width: 50px;
+	height: 50px;
+	background-color: teal;
+	color: white;
+	text-align: center;
 	font-size: 20px;
-	position: relative;
-	font-family: 'Lucida Sans', Verdana, sans-serif;
-}
-p::first-line {
-	background-color: rgb(164, 43, 164);
-	color: rgb(0, 221, 255);
-}
-p::first-letter {
-	font-size: 40px;
-	font-style: italic;
-	font-family: "Comic Sans MS", Comic Sans, cursive;
-}
-p::before {
-	content: '"';
-	position: absolute;
-	font-size: 40px;
-	color: rgb(164, 43, 164);
-}
-p::after {
-	content: '"';
-	position: absolute;
-	font-size: 40px;
-	color: rgb(164, 43, 164);
+	border: 2px solid red;
 }
