--- a/style.css
+++ b/style.css
@@ -1,320 +1,75 @@
 * {
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
 .container {
+	background-image: url(/image/shell.jpg);
+	background-size: 100% 100%;
 	width: 100%;
+	height: 100vh;
 }
-nav {
-	background-color: white;
-	position: fixed;
-	width: 100%;
-	border-bottom: 2px solid black;
+.top-art {
+	padding: 350px;
+	text-align: center;
+	color: rgb(146, 98, 57);
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-ul {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	font-size: 70px;
+h1 {
+	font-size: 50px;
 	font-weight: 900;
-	list-style-type: none;
 }
-.li {
-	color: black;
-	text-decoration: none;
+.top-div {
+	font-size: 19px;	
 }
-.container2 {
-	display: flex;
-	flex-direction: row;
-	padding-top: 82px;
-	width: 100%;
-	height: 100%;
-	background-color: grey;
-}
-.lorem {
-	font-size: 30px;
-	margin-left: 100px;
-	width: 70%;
-	/* padding-top: 100px;
-	padding-left: 400px; */
-	/* position: absolute */
-}
-.left-ads {
-	width: 15%;
-	border-right: 2px solid black;
-	background-image: url(/image/coffee.jpg);
-	background-size: cover;
-}
-@media screen and (max-width: 1100px) {
-	* {
-		padding: 0;
-		margin: 0;
-	}
-	.container {
-		width: 100%;
-	}
-	nav {
-		background-color: red;
-		position: fixed;
-		width: 100%;
-		border-bottom: 1px solid black;
-	}
-	ul {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		font-size: 50px;
-		font-weight: 700;
-		list-style-type: none;
-	}
-	.li {
-		color: black;
-		text-decoration: none;
-	}
-	.container2 {
-		display: flex;
-		flex-direction: row;
-		padding-top: 59px;
-		width: 100%;
-		height: 100%;
-		background-color: grey;
-	}
-	.lorem {
-		font-size: 25px;
-		margin-left: 100px;
-		width: 70%;
-		/* padding-top: 100px;
-		padding-left: 400px; */
-		/* position: absolute */
-	}
-	.left-ads {
-		width: 15%;
-		border-right: 2px solid black;
-		background-image: url(/image/coffee.jpg);
-		background-size: cover;
-	}
-}
-@media screen and (max-width: 800px) {
-	* {
-		padding: 0;
-		margin: 0;
-	}
-	.container {
-		width: 100%;
-	}
-	nav {
-		background-color: orange;
-		position: fixed;
-		width: 100%;
-		border-bottom: 1px solid black;
-	}
-	ul {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		font-size: 40px;
-		font-weight: 500;
-		list-style-type: none;
-	}
-	.li {
-		color: black;
-		text-decoration: none;
-	}
-	.container2 {
-		display: flex;
-		flex-direction: row;
-		padding-top: 47px;
-		width: 100%;
-		height: 100%;
-		background-color: grey;
-	}
-	.lorem {
-		font-size: 22px;
-		margin-left: 100px;
-		width: 70%;
-		/* padding-top: 100px;
-		padding-left: 400px; */
-		/* position: absolute */
-	}
-	.left-ads {
-		width: 15%;
-		border-right: 1px solid black;
-		background-image: url(/image/coffee.jpg);
-		background-size: cover;
-	}
-}
-@media screen and (max-width: 550px) {
-	* {
-		padding: 0;
-		margin: 0;
-	}
-	.container {
-		width: 100%;
-	}
-	nav {
-		background-color: yellow;
-		position: fixed;
-		width: 100%;
-		border-bottom: 1px solid black;
-	}
-	ul {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		font-size: 30px;
-		font-weight: 300;
-		list-style-type: none;
-	}
-	.li {
-		color: black;
-		text-decoration: none;
-	}
-	.container2 {
-		display: flex;
-		flex-direction: row;
-		padding-top: 33px;
-		width: 100%;
-		height: 100%;
-		background-color: grey;
-	}
-	.lorem {
-		font-size: 18px;
-		margin-left: 40px;
-		width: 70%;
-		/* padding-top: 100px;
-		padding-left: 400px; */
-		/* position: absolute */
-	}
-	.left-ads {
-		width: 15%;
-		border-right: 1px solid black;
-		background-image: url(/image/coffee.jpg);
-		background-size: cover;
-	}
-}
-@media screen and (max-width: 450px) {
-	* {
-		padding: 0;
-		margin: 0;
-	}
-	.container {
-		width: 100%;
-	}
-	nav {
-		background-color: green;
-		position: fixed;
-		width: 100%;
-		border-bottom: 1px solid black;
-	}
-	ul {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		font-size: 22px;
-		font-weight: 150;
-		list-style-type: none;
-	}
-	.li {
-		color: black;
-		text-decoration: none;
-	}
-	.container2 {
-		display: flex;
-		flex-direction: row;
-		padding-top: 27px;
-		width: 100%;
-		height: 100%;
-		background-color: grey;
-	}
-	.lorem {
-		font-size: 14px;
-		margin-left: 30px;
-		width: 70%;
-		/* padding-top: 100px;
-		padding-left: 400px; */
-		/* position: absolute */
-	}
-	.left-ads {
-		width: 15%;
-		border-right: 1px solid black;
-		background-image: url(/image/coffee.jpg);
-		background-size: cover;
-	}
-}
-@media screen and (max-width: 300px) {
-	* {
-		padding: 0;
-		margin: 0;
-	}
-	.container {
-		width: 100%;
-	}
-	nav {
-		background-color: rgb(123, 123, 180);
-		position: fixed;
-		width: 100%;
-		border-bottom: 1px solid black;
-	}
-	ul {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		font-size: 17px;
-		font-weight: 100;
-		list-style-type: none;
-	}
-	.li {
-		color: black;
-		text-decoration: none;
-	}
-	.container2 {
-		display: flex;
-		flex-direction: row;
-		padding-top: 21px;
-		width: 100%;
-		height: 100%;
-		background-color: grey;
-	}
-	.lorem {
-		font-size: 10px;
-		margin-left: 5px;
-		width: 100%;
-		/* padding-top: 100px;
-		padding-left: 400px; */
-		/* position: absolute */
-	}
-	.left-ads {
-		width: 0%;
-		border-right: 1px solid black;
-		background-image: url(/image/coffee.jpg);
-		background-size: cover;
-	}
-}
-/* :root {
-	font-size: 20px;
-}
-ul {
-	font-size: 0px;
-}
-li {
-	display: inline-block;
-	background-color: rgb(148, 54, 54);
+button {
+	font-size: 19px;
+	color: rgb(146, 98, 57);
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	margin-top: 20px;
 	padding: 10px;
-	font-size: 2rem;
+	border: 1px solid rgb(146, 98, 57);
+	border-radius: 7px;
+	background: transparent;
 }
-@media screen and (min-width: 300px) and (max-width: 500px) {
-	li {
-		display: block;
-		background-color: rgb(123, 148, 54);
-		padding: 10px;
-		font-size: 2rem;
-	}
+button:hover {
+	background-color: rgb(146, 98, 57);
+	color: white;
 }
-@media screen and (max-width: 299px) {
-	li {
-		display: block;
-		background-color: rgb(148, 54, 112);
-		padding: 10px;
-		font-size: 2rem;
-	}
-} */
+.footer {
+	text-align: center;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.footer-div-1 {
+	font-size: 18px;
+	color: white;
+	background-color: rgb(146, 98, 57);
+	padding: 20px;
+	width: 100%;
+}
+.footer-div-2 {
+	font-size: 18px;
+	color: rgb(146, 98, 57);
+	background-color: white;
+	padding: 20px;
+	width: 100%;
+}
+table {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-size: 18px;
+	width: 100%;
+}
+th {
+	padding: 20px;
+	font-weight: 100;
+	text-align: left;
+}
+.th1,
+.th3 {
+	color: white;
+	background-color: rgb(146, 98, 57);
+}
+.th2 {
+	color: rgb(146, 98, 57) ;
+	background-color: white;
+}
