--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container {
 	background-image: url(/image/shell.jpg);
@@ -13,7 +14,6 @@
 	padding: 350px;
 	text-align: center;
 	color: rgb(146, 98, 57);
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 h1 {
 	font-size: 50px;
@@ -25,7 +25,6 @@ h1 {
 button {
 	font-size: 19px;
 	color: rgb(146, 98, 57);
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	margin-top: 20px;
 	padding: 10px;
 	border: 1px solid rgb(146, 98, 57);
@@ -38,7 +37,6 @@ button:hover {
 }
 .footer {
 	text-align: center;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .footer-div-1 {
 	font-size: 18px;
@@ -55,13 +53,11 @@ button:hover {
 	width: 100%;
 }
 table {
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 18px;
 	width: 100%;
 }
-th {
+td {
 	padding: 20px;
-	font-weight: 100;
 	text-align: left;
 }
 .th1,
